# docs/swagger.json
@@ -25,11 +25,11 @@
                 "parameters": [
                     {
                         "description": "Lighthouse parameters to generate the report",
-                        "name": "body",
+                        "name": "ReportRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.ReportInput"
+                            "$ref": "#/definitions/api.ReportRequest"
                         }
                     }
                 ],
@@ -89,6 +89,10 @@
                 "created_at": {
                     "type": "string"
                 },
+                "form_factor": {
+                    "type": "string",
+                    "example": "desktop"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -103,9 +107,13 @@
                 }
             }
         },
-        "api.ReportInput": {
+        "api.ReportRequest": {
             "type": "object",
             "properties": {
+                "form_factor": {
+                    "type": "string",
+                    "example": "desktop"
+                },
                 "url": {
                     "type": "string",
                     "example": "https://www.google.com"
